--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,4 +1,3 @@
-/* src/App.css */
 
 .App {
   text-align: center;
@@ -24,7 +23,6 @@
   margin: 0 auto;
   line-height: 1.6;
 }
-/* src/App.css */
 
 .item-filter-section {
   display: flex;
@@ -41,7 +39,7 @@
 .item-count-filter {
   display: flex;
   align-items: center;
-  gap: 20px; /* This sets the gap between the item count and the filter link */
+  gap: 20px; 
 }
 
 .filter-controls {
@@ -75,7 +73,7 @@
   border-radius: 5px;
 }
 
-/* src/App.css */
+
 
 .item-filter-section {
   display: flex;
@@ -88,7 +86,7 @@
 .item-count-filter {
   display: flex;
   align-items: center;
-  gap: 20px; /* 20px gap between item count and filter toggle */
+  gap: 20px; 
 }
 
 .item-count {
@@ -114,7 +112,7 @@
 }
 
 .sort-dropdown::after {
-  content: '▼'; /* Down arrow symbol */
+  content: '▼'; 
   font-size: 14px;
   color: #007bff;
   margin-left: 5px;
@@ -126,9 +124,9 @@
   align-items: flex-start;
   margin: 20px 0;
   padding: 20px;
-  background-color: #f9f9f9; /* Lighter background */
-  border-radius: 8px; /* Soft rounded corners */
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+  background-color: #f9f9f9;
+  border-radius: 8px; 
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
 }
 
 
@@ -141,55 +139,34 @@
 }
 
 .filter-item label {
-  font-size: 16px; /* Slightly larger font */
+  font-size: 16px;
   color: #333;
 }
 
-/* .filter-item select {
-  padding: 5px;
-  font-size: 14px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-} */
-/* 
-.filter-option {
-  margin-left: auto;
-  font-size: 12px;
-  color: #555;
-} */
+
 .filter-item select {
   padding: 8px 12px;
   font-size: 14px;
   border-radius: 4px;
-  border: 1px solid #ccc; /* Soft border */
-  width: 100%; /* Full width for better UI */
-  background-color: #fff; /* White background for dropdown */
+  border: 1px solid #ccc; 
+  width: 100%; 
+  background-color: #fff; 
   cursor: pointer;
 }
 
 .filter-item select:focus {
-  border-color: #007bff; /* Highlight on focus */
+  border-color: #007bff;
 }
 
 .filter-item select::after {
-  content: '▼'; /* Down arrow symbol */
-  font-size: 14px;
-  color: #007bff;
-  margin-left: 5px;
-}
-
-/* .filter-item select::after {
   content: '▼'; 
   font-size: 14px;
   color: #007bff;
   margin-left: 5px;
 }
 
-.filter-item select:focus::after {
-  content: '▲'; 
-}  */
 
-/* src/App.css */
+
 .filter-toggle {
   font-size: 14px;
   color: #007bff;
@@ -290,14 +267,14 @@
 
 
 
-/* General Responsive Adjustments */
+
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* Ensure text and elements are appropriately sized */
+
 @media (max-width: 768px) {
   body {
     font-size: 14px;
